parser/tests/bad/decl01-5.st
% re-declaration of identifier 'x'
%   formal has the same name as the subprogram

procedure p(p: int)
  % empty
end p
